--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ header {
 .card {
     background-color: navy;
     color: white;
-    padding: 10px;
+    padding: 5px 20px;
     margin: 10px
 }
 
@@ -28,3 +28,7 @@ header {
     flex-wrap: wrap;
 }
 
+img {
+    height: 40px;
+    width: 40px;
+}
